static/style.css
body {
    background: #F1ECDF;
    color: #1F1F1F;
    font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
    font-weight: 300;
    font-size: 14px;
}

a {
    color: #BF4D28;
    text-decoration: none;
}

a:hover {
    color: #1F1F1F;
}

a.feed {
    font-size: 12px;
}

h1 {
    font-size: 24px;
    font-weight: 300;
    margin: 15px 0px 5px 0px;
}

.container {
    width: 500px;
    margin: 10px auto 0px auto;
}

.profile {
    display: block;
    width: 500px;
    margin: 15px 0px 5px 0px;
}

.name {
    font-size: 32px;
    display: block;
    color: #1F1F1F;
    margin-bottom: 5px;
}

.bio {
    text-align: center;
    background: #F6F7BD;
    padding: 10px;
    margin-top: 15px;
}

.links {
    text-align: center;
}

.links a {
    display: inline-block;
    text-decoration: none;
    font-weight: 300;
    font-size: 16px;
    width: 124px;
    margin: 0px auto 0px auto;
    color: #EEE;
    padding: 10px 0px 10px 0px;
}

.links a:nth-child(1) {
    background: #45AAB8;
}

.links a:nth-child(2) {
    background: #80BCA3;
}

.links a:nth-child(3) {
    background: #E6AC27;
}

.links a:nth-child(4) {
    background: #BF4D28;
}

a.post {
    margin-left: 10px;
    font-size: 18px;
}

span.post_date {
    font-size: 10px;
}

.post .description {
    font-size: 12px;
}

.post_container {
    background: #EEE;
    border: 1px solid #444;
    border-top: 0px;
    width: 494px;
    margin: 0px auto 0px auto;
}

.post_title {
    font-family: "Libre Baskerville", Georgia, serif;
    font-size: 24px;
    font-weight: 400;
    padding: 10px 10px 0px 10px;
}

.post_description {
    font-family: "Libre Baskerville", Georgia, serif;
    color: #655643;
    font-style: italic;
    padding: 3px 15px 0px 15px;
}

.post_footer {
    padding: 0px 10px 0px 10px;
    font-style: italic;
}

.post_meta {
    font-size: 12px;
    padding: 10px 10px 10px 10px;
    text-align: right;
}


.post_minidescription {
    font-size: 12px;
    font-style: italic;
    margin: 3px 0px 7px 10px;
}

.post_content {
    font-family: "Libre Baskerville", Georgia, serif;
    line-height: 2em;
    padding: 0px 10px 0px 10px;
}

.post_content img {
    display: block;
    width: 450px;
    margin: 0px auto 5px auto;
    border: 3px solid #FFF;
}

.post_content .caption {
    width: 450px;
    margin: 0px auto 5px auto;
    padding: 0px 10px 0px 10px;
    font-style: italic;
    font-size: 12px;
    line-height: 1.5em;
    text-align: center;
}

.post_content p:nth-child(1) {
    margin: .5em 0px .75em 0px;
}

.post_content p {
    margin: 0px 0px .75em 0px;
    text-indent: 20px;
}

.footnotes hr {
    display: none;
}

.footnotes ol {
    display: block;
    padding: 0px;
    margin: 0px auto 0px auto;
    border-top: 1px solid #CCC;
    list-style-position: inside;
}

.footnotes ol li {
    margin-top: 5px;
}

.footnotes li p {
    display: inline;
    margin: 0px !important;
    padding: 0px;
    text-indent: 0px;
}

.footer {
    text-align: center;
    margin: 10px 0px 10px 0px;
}

.footer img {
    vertical-align: middle;
    display: inline-block;
    margin-right: 3;px;
}

.thing {
    font-size: 18px;
    margin: 5px 0px 5px 10px;
}

@media all and (max-width: 515px) {
    .thing {
        margin: 10px 0px 10px 10px;
        line-height: 1.5em;
    }

    p {
        line-height: 1.5em;
    }

    h1 {
        font-size: 36px;
    }
}

